fix sidenav overlap and border-radius on post-image

--- a/css/main.scss
+++ b/css/main.scss
@@ -950,7 +950,7 @@ html {
       height: 100%;
       width: 0;
       position: fixed;
-      z-index: 1;
+      z-index: 2000;
       top: 0;
       right: 0;
       background-color: var(--colour-background-invert);
