--- a/css/media.scss
+++ b/css/media.scss
@@ -110,6 +110,8 @@ html {
         .posts {
           .post {
             .post-image {
+              border-bottom-left-radius: 0;
+              border-bottom-right-radius: 0;
               height: 256px;
 
               .image-wrapper {
@@ -117,6 +119,8 @@ html {
 
                 .image {
                   height: 256px;
+                  border-bottom-left-radius: 0;
+                  border-bottom-right-radius: 0;
                 }
               }
             }
